added api for marking item as favorite
