# src/routes/appRoutes.ts
@@ -34,6 +34,9 @@ export class ApplicationRoutes {
     this.router.route("/items/:mediaItemId").get(asyncHandler(this.mediaItemsController.get));
     this.router.route("/items/:mediaItemId").delete(asyncHandler(this.mediaItemsController.deleteMediaItem));
 
+    this.router.route("/items/:mediaItemId/favorite").put(asyncHandler(this.mediaItemsController.markItemAsFavorite));
+    this.router.route("/items/:mediaItemId/favorite").delete(asyncHandler(this.mediaItemsController.unFavoriteItem));
+
     this.router.route("/items/:mediaItemId/externalIds").post(asyncHandler(this.mediaItemsController.attachExternalIdToMediaItem));
     this.router.route("/items/:mediaItemId/externalIds").delete(asyncHandler(this.mediaItemsController.detachExternalIdFromMediaItem));
 
